Role based authitication Added

--- a/ArchiveSystem/Views/Document/Index.cshtml
+++ b/ArchiveSystem/Views/Document/Index.cshtml
@@ -18,6 +18,9 @@
                         <th>Catagory</th>
                         <th>Sub Catagory</th>
                         <th>About</th>
+                        <th>other</th>
+                        <th>Region</th>
+                        <th>fileName</th>
                         <th></th>
                     </tr>
                 </thead>
