--- a/ArchiveSystem/Views/_ViewImports.cshtml
+++ b/ArchiveSystem/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using ArchiveSystem
 @using ArchiveSystem.Models
+@using  Microsoft.AspNetCore.Identity;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
