--- a/ArchiveSystem/Views/Administration/EditUsersInRole.cshtml
+++ b/ArchiveSystem/Views/Administration/EditUsersInRole.cshtml
@@ -2,7 +2,8 @@
 @{
     var roleId = ViewBag.roleId;
  }
-<from method="post">
+
+<form method="Post">
     <div class="card">
         <div class="card-header">
             <h2>Add or Remove Users from this role</h2>
@@ -15,16 +16,15 @@
             <div class="foem-check m-1">
                 <input type="hidden" asp-for="@Model[i].UserId" />
                 <input type="hidden" asp-for="@Model[i].UserName" />
-
                 <input asp-for="@Model[i].IsSelected" class="form-check-input" />
                 <label class="form-check-label" asp-for="@Model[i].IsSelected">@Model[i].UserName</label>
             </div>
         }
             </div>
             <div class="card-footer">
-                <input type="submit" value="Update" class="btn btn-primary" style="width:auto" />
+                
+                <input type="submit" value="Update" class="btn btn-primary" style="width:auto"  />
                 <a asp-action="EditRole" asp-route-id="@roleId" class="btn btn-primary" style="width:auto">Cancel</a>
             </div>
-
-        </div>
-</from>
+    </div>
+</form>
